--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+.box-container {
+  width: 70%;
+  height: 70%;
+  background-color: rgb(73, 79, 85);
+  padding: 5%;
+  margin: auto;
+  border: 5px solid white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#editor {
+  background-color: aliceblue;
+  width: 90%;
+  height: 200px;
+  resize: vertical;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  background-color: rgb(26, 26, 26);
   color: white;
+  font-family: Barlow;
 }
 
-.App-link {
-  color: #61dafb;
+#preview {
+  background-color: aliceblue;
+  color: black;
+  padding: 5px;
+  width: 90%;
+  height: 90%;
+  overflow: scroll;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#preview img {
+  width: 300px;
+  height: 300px;
 }
